--- a/pages/s.html
+++ b/pages/s.html
@@ -18,7 +18,7 @@
     <title>Celestials</title>
   </head>
   <body>
-    <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
+    <div id="grad2" class="container-fluid p-0">
       <nav
         id="navtest"
         class="navbar navbar-expand-md navbar-light sticky-top mr-0"
@@ -107,10 +107,8 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href=""
-                  id="navbarDropdown"
+                  href="s.html"
                   role="button"
-                  data-bs-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                   >STREAMERS</a
@@ -133,114 +131,140 @@
         </div>
       </nav>
 
-      <div class="row mt-5">
-        <div class="col">
-          <h2 class="text-center">Streamers</h2>
-        </div>
-      </div>
-      <div class="container-lg">
-        <div class="row mt-3">
-          <div class="col-md-4 col-sm-12 mt-2">
-            <div class="row"><img src="25thumb.png" alt="" /></div>
-            <div class="row">
-              <div class="col-auto">
-                <h5 class="text-left">Streamer Name</h5>
-              </div>
-              <div class="col">Viewcount</div>
-              <div class="col">extra info</div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12 mt-2">
-            <div class="row"><img src="25thumb.png" alt="" /></div>
-            <div class="row">
-              <div class="col-auto">
-                <h5 class="text-left">Streamer Name</h5>
-              </div>
-              <div class="col">Viewcount</div>
-              <div class="col">extra info</div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-12 mt-2">
-            <div class="row"><img src="25thumb.png" alt="" /></div>
-            <div class="row">
-              <div class="col-auto">
-                <h5 class="text-left">Streamer Name</h5>
-              </div>
-              <div class="col">Viewcount</div>
-              <div class="col">extra info</div>
-            </div>
+      <div class="container-lg p-0">
+        <div class="row mt-5">
+          <div class="col">
+            <h2 class="text-center">Streamers</h2>
           </div>
         </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col">
-          <h2 class="text-center">Offline Streamers</h2>
-        </div>
-      </div>
-      <div class="container-lg">
-        <div class="row">
-          <div class="col-md-4 col-sm-12">
-            <div class="row justify-content-center mt-2">
-              <div class="col-auto">
-                <img
-                  class="img-fluid rounded-circle"
-                  src="profilephotoexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="col-auto my-auto">
-                <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                  Streamers Name
-                </h5>
+        <div class="container-lg">
+          <div class="row mt-3">
+            <div class="col-md-4 col-sm-12 mt-2">
+              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
+              <div class="row">
+                <div class="col-auto">
+                  <h5 class="text-left">Streamer Name</h5>
+                </div>
+                <div class="col">Viewcount</div>
+                <div class="col">extra info</div>
               </div>
             </div>
-          </div>
-
-          <div class="col-md-4 col-sm-12">
-            <div class="row justify-content-center mt-2">
-              <div class="col-auto">
-                <img
-                  class="img-fluid rounded-circle"
-                  src="profilephotoexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="col-auto my-auto">
-                <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                  Streamers Name
-                </h5>
+            <div class="col-md-4 col-sm-12 mt-2">
+              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
+              <div class="row">
+                <div class="col-auto">
+                  <h5 class="text-left">Streamer Name</h5>
+                </div>
+                <div class="col">Viewcount</div>
+                <div class="col">extra info</div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4 col-sm-12">
-            <div class="row justify-content-center mt-2">
-              <div class="col-auto">
-                <img
-                  class="img-fluid rounded-circle"
-                  src="profilephotoexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="col-auto my-auto">
-                <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                  Streamers Name
-                </h5>
+            <div class="col-md-4 col-sm-12 mt-2">
+              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
+              <div class="row">
+                <div class="col-auto">
+                  <h5 class="text-left">Streamer Name</h5>
+                </div>
+                <div class="col">Viewcount</div>
+                <div class="col">extra info</div>
               </div>
             </div>
           </div>
         </div>
         <div class="row mt-5">
           <div class="col">
-            <h1>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-              aliquid molestiae quidem ariatur architecto amet non, nesciunt
-              aliquam nam maxime temporibus veritatis quos eum veniam enim
-              voluptates quod, fugit laborum? Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Totam mollitia illum maiores
-              dolorem! Praesentium corrupti, adipisci obcaecati aspernatur sunt
-              deserunt quod repellat, velit perspiciatis vel magnam esse. Amet,
-              inventore sint.
-            </h1>
+            <h2 class="text-center">Offline Streamers</h2>
+          </div>
+        </div>
+        <div class="container-lg">
+          <div class="row">
+            <div class="col-md-4 col-sm-12">
+              <div class="row justify-content-center mt-2">
+                <div class="col-auto">
+                  <img
+                    class="img-fluid rounded-circle"
+                    src="../images/profilephotoexample.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-auto my-auto">
+                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
+                    Streamers Name
+                  </h5>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-12">
+              <div class="row justify-content-center mt-2">
+                <div class="col-auto">
+                  <img
+                    class="img-fluid rounded-circle"
+                    src="../images/profilephotoexample.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-auto my-auto">
+                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
+                    Streamers Name
+                  </h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+              <div class="row justify-content-center mt-2">
+                <div class="col-auto">
+                  <img
+                    class="img-fluid rounded-circle"
+                    src="../images/profilephotoexample.png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-auto my-auto">
+                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
+                    Streamers Name
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col">
+              <h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+                aliquid molestiae quidem ariatur architecto amet non, nesciunt
+                aliquam nam maxime temporibus veritatis quos eum veniam enim
+                voluptates quod, fugit laborum? Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Totam mollitia illum maiores
+                dolorem! Praesentium corrupti, adipisci obcaecati aspernatur
+                sunt deserunt quod repellat, velit perspiciatis vel magnam esse.
+                Amet, inventore sint.
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid pt-2" id="grad1">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <img src="../svgs/White_C_Logo (1).svg" alt="" />
+          </div>
+          <div class="col-auto">
+            <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-auto"><img src="../svgs/youtube.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/twitter.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/instagram.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/tiktok.svg" alt="" /></div>
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-md-auto col-sm-0">
+            <small style="font-weight: bold" class="text-light p-0"
+              >&#169; CELESTIALS 2022</small
+            >
           </div>
         </div>
       </div>
