--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -134,10 +134,8 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href=""
-                  id="navbarDropdown"
+                  href="s.html"
                   role="button"
-                  data-bs-toggle="dropdown"
                   aria-haspopup="true"
                   aria-expanded="false"
                   >STREAMERS</a
@@ -277,6 +275,29 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid pt-2" id="grad1">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <img src="../svgs/White_C_Logo (1).svg" alt="" />
+          </div>
+          <div class="col-auto">
+            <img src="../svgs/FINALWHITETEXT.svg" alt="" />
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-auto"><img src="../svgs/youtube.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/twitter.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/instagram.svg" alt="" /></div>
+          <div class="col-auto"><img src="../svgs/tiktok.svg" alt="" /></div>
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-md-auto col-sm-0">
+            <small style="font-weight: bold" class="text-light p-0"
+              >&#169; CELESTIALS 2022</small
+            >
           </div>
         </div>
       </div>
