footer spacing, s link fixed, size scrolling fixed

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <li class="nav-item">
                 <a
                   class="fw-bold text-light nav-link active"
-                  href="s.html"
+                  href="pages/s.html"
                   role="button"
                   aria-haspopup="true"
                   aria-expanded="false"
@@ -247,8 +247,8 @@
           ></iframe>
         </div>
       </div>
-      <div class="container-fluid p-0 pt-2" id="grad1">
-        <div class="row justify-content-center">
+      <div class="container-fluid pt-2" id="grad1">
+        <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="svgs/White_C_Logo (1).svg" alt="" />
           </div>
@@ -256,17 +256,17 @@
             <img src="svgs/FINALWHITETEXT.svg" alt="" />
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mt-2">
           <div class="col-auto"><img src="svgs/youtube.svg" alt="" /></div>
           <div class="col-auto"><img src="svgs/twitter.svg" alt="" /></div>
           <div class="col-auto"><img src="svgs/instagram.svg" alt="" /></div>
           <div class="col-auto"><img src="svgs/tiktok.svg" alt="" /></div>
         </div>
         <div class="row justify-content-end">
-          <div class="col-auto">
-            <small style="font-weight: bold" class="text-light p-0"
-              >&#169; CELESTIALS 2022</small
-            >
+          <div class="col-7 col-md-3">
+            <p style="font-weight: bold" class="text-center text-light m-0">
+              &#169; CELESTIALS 2022
+            </p>
           </div>
         </div>
       </div>
