--- a/pages/s.html
+++ b/pages/s.html
@@ -246,7 +246,7 @@
       </div>
 
       <div class="container-fluid pt-2" id="grad1">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="../svgs/White_C_Logo (1).svg" alt="" />
           </div>
@@ -254,17 +254,17 @@
             <img src="../svgs/FINALWHITETEXT.svg" alt="" />
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mt-2">
           <div class="col-auto"><img src="../svgs/youtube.svg" alt="" /></div>
           <div class="col-auto"><img src="../svgs/twitter.svg" alt="" /></div>
           <div class="col-auto"><img src="../svgs/instagram.svg" alt="" /></div>
           <div class="col-auto"><img src="../svgs/tiktok.svg" alt="" /></div>
         </div>
         <div class="row justify-content-end">
-          <div class="col-md-auto col-sm-0">
-            <small style="font-weight: bold" class="text-light p-0"
-              >&#169; CELESTIALS 2022</small
-            >
+          <div class="col-7 col-md-3">
+            <p style="font-weight: bold" class="text-center text-light m-0">
+              &#169; CELESTIALS 2022
+            </p>
           </div>
         </div>
       </div>
