uploading for desktop, not finished script

--- a/pages/s.html
+++ b/pages/s.html
@@ -137,7 +137,7 @@
             <h2 class="text-center">Streamers</h2>
           </div>
         </div>
-        <div class="container-lg">
+        <div class="container-lg" id="joemama">
           <div class="row mt-3">
             <div class="col-md-4 col-sm-12 mt-2">
               <div class="row"><img src="../images/25thumb.png" alt="" /></div>
@@ -176,73 +176,7 @@
             <h2 class="text-center">Offline Streamers</h2>
           </div>
         </div>
-        <div class="container-lg">
-          <div class="row">
-            <div class="col-md-4 col-sm-12">
-              <div class="row justify-content-center mt-2">
-                <div class="col-auto">
-                  <img
-                    class="img-fluid rounded-circle"
-                    src="../images/profilephotoexample.png"
-                    alt=""
-                  />
-                </div>
-                <div class="col-auto my-auto">
-                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                    Streamers Name
-                  </h5>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-4 col-sm-12">
-              <div class="row justify-content-center mt-2">
-                <div class="col-auto">
-                  <img
-                    class="img-fluid rounded-circle"
-                    src="../images/profilephotoexample.png"
-                    alt=""
-                  />
-                </div>
-                <div class="col-auto my-auto">
-                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                    Streamers Name
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-              <div class="row justify-content-center mt-2">
-                <div class="col-auto">
-                  <img
-                    class="img-fluid rounded-circle"
-                    src="../images/profilephotoexample.png"
-                    alt=""
-                  />
-                </div>
-                <div class="col-auto my-auto">
-                  <h5 class="m-0" style="color: rgb(169, 111, 255)">
-                    Streamers Name
-                  </h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-5">
-            <div class="col">
-              <h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-                aliquid molestiae quidem ariatur architecto amet non, nesciunt
-                aliquam nam maxime temporibus veritatis quos eum veniam enim
-                voluptates quod, fugit laborum? Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Totam mollitia illum maiores
-                dolorem! Praesentium corrupti, adipisci obcaecati aspernatur
-                sunt deserunt quod repellat, velit perspiciatis vel magnam esse.
-                Amet, inventore sint.
-              </h1>
-            </div>
-          </div>
-        </div>
+        <div class="container-lg" id="offlineContainer"></div>
       </div>
 
       <div class="container-fluid pt-2" id="grad1">
@@ -280,5 +214,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
+    <script src="../test.js"></script>
   </body>
 </html>
