--- a/pages/s.html
+++ b/pages/s.html
@@ -134,7 +134,7 @@
       <div class="container-lg p-0">
         <div class="row mt-5">
           <div class="col">
-            <h2 class="text-center">Streamers</h2>
+            <h2 class="text-center">Streamers Currently Live</h2>
           </div>
         </div>
         <div class="container-lg" id="joemama">
@@ -173,7 +173,7 @@
         </div>
         <div class="row mt-5">
           <div class="col">
-            <h2 class="text-center">Offline Streamers</h2>
+            <h2 class="text-center">Streamers Currently Offline</h2>
           </div>
         </div>
         <div class="container-lg" id="offlineContainer"></div>
