--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -313,5 +313,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="../wtest.js"></script>
   </body>
 </html>
