--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -18,7 +18,7 @@
     <title>Celestials</title>
   </head>
   <body>
-    <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
+    <div id="grad2" class="container-fluid p-0">
       <nav
         id="navtest"
         class="navbar navbar-expand-md navbar-light sticky-top mr-0"
@@ -158,7 +158,7 @@
         </div>
       </nav>
 
-      <div class="container-fluid" id="grad2">
+      <div class="container-lg" id="joe">
         <div class="row">
           <div class="col">
             <div class="h1 text-center">Celestials WoW Roster</div>
@@ -302,7 +302,7 @@
         </div>
       </div>
     </div>
-
+    <script type="module" src="../wtest.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -313,6 +313,5 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="../wtest.js"></script>
   </body>
 </html>
