--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -157,126 +157,15 @@
           </div>
         </div>
       </nav>
-
-      <div class="container-lg" id="joe">
+      <div class="container-lg mt-5">
         <div class="row">
           <div class="col">
             <div class="h1 text-center">Celestials WoW Roster</div>
           </div>
         </div>
-
-        <div class="container-lg">
-          <div class="row justify-content-around">
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center text-light">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center text-light">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center text-light">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center text-light">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center text-light">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center text-light">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      </div>
+      <div class="container-lg" id="joe">
+        <div class="container-lg"></div>
       </div>
       <div class="container-fluid pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
