--- a/pages/s.html
+++ b/pages/s.html
@@ -131,13 +131,13 @@
         </div>
       </nav>
 
-      <div class="container-lg p-0">
+      <div class="container-fluid p-0">
         <div class="row mt-5">
           <div class="col">
             <h2 class="text-center border-bottom">Streamers Currently Live</h2>
           </div>
         </div>
-        <div class="container-lg" id="joemama">
+        <div class="container-fluid" id="joemama">
           <div class="row mt-3">
             <div class="col-md-4 col-sm-12 mt-2">
               <div class="row"><img src="../images/25thumb.png" alt="" /></div>
