--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -164,7 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="container-lg" id="joe">
+      <div class="container-fluid" id="joe">
         <div class="container-lg"></div>
       </div>
       <div class="container-fluid pt-2" id="grad1">
