--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -167,7 +167,7 @@
       <div class="container-fluid" id="joe">
         <div class="container-lg"></div>
       </div>
-      <div class="container-fluid pt-2" id="grad1">
+      <div class="container-fluid mt-5 pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="../svgs/White_C_Logo (1).svg" alt="" />
