team pages have own scripts, look cleaner

--- a/pages/s.html
+++ b/pages/s.html
@@ -137,40 +137,7 @@
             <h2 class="text-center border-bottom">Streamers Currently Live</h2>
           </div>
         </div>
-        <div class="container-fluid" id="joemama">
-          <div class="row mt-3">
-            <div class="col-md-4 col-sm-12 mt-2">
-              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
-              <div class="row">
-                <div class="col-auto">
-                  <h5 class="text-left">Streamer Name</h5>
-                </div>
-                <div class="col">Viewcount</div>
-                <div class="col">extra info</div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12 mt-2">
-              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
-              <div class="row">
-                <div class="col-auto">
-                  <h5 class="text-left">Streamer Name</h5>
-                </div>
-                <div class="col">Viewcount</div>
-                <div class="col">extra info</div>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12 mt-2">
-              <div class="row"><img src="../images/25thumb.png" alt="" /></div>
-              <div class="row">
-                <div class="col-auto">
-                  <h5 class="text-left">Streamer Name</h5>
-                </div>
-                <div class="col">Viewcount</div>
-                <div class="col">extra info</div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="container-fluid" id="insert"></div>
         <div class="row mt-5">
           <div class="col">
             <h2 class="text-center border-bottom">
