--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -18,7 +18,7 @@
     <title>Celestials</title>
   </head>
   <body>
-    <div style="background-color: rgb(14, 14, 28)" class="container-fluid p-0">
+    <div class="container-fluid p-0" id="grad2">
       <nav
         id="navtest"
         class="navbar navbar-expand-md navbar-light sticky-top mr-0"
@@ -158,127 +158,16 @@
         </div>
       </nav>
 
-      <div class="container-fluid" id="grad2">
+      <div class="container-fluid">
         <div class="row">
           <div class="col">
             <div class="h1 text-center">Celestials Valorant Roster</div>
           </div>
         </div>
 
-        <div class="container-lg">
-          <div class="row justify-content-around">
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div
-              id="playercard"
-              class="col-sm-8 col-md-3 bg-primary rounded-xl mt-5"
-            >
-              <div class="row">
-                <img
-                  class="img-fluid p-0 rounded-xlphoto"
-                  src="../images/8x10headshotexample.png"
-                  alt=""
-                />
-              </div>
-              <div class="">
-                <div class="col">
-                  <h3 class="text-center">Kyle Landon</h3>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <h5 class="text-center">Guild Leader</h5>
-                </div>
-              </div>
-              <div class="row justify-content-around mb-2">
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitch.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/twitter.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/tiktok.svg" alt="" />
-                </div>
-                <div class="col-3 d-flex justify-content-center">
-                  <img src="../svgs/youtube.svg" alt="" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row justify-content-around" id="insert"></div>
       </div>
-      <div class="container-fluid pt-2" id="grad1">
+      <div class="container-fluid mt-5 pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="../svgs/White_C_Logo (1).svg" alt="" />
@@ -313,5 +202,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
+    <script src="../valscript.js"></script>
   </body>
 </html>
