--- a/pages/s.html
+++ b/pages/s.html
@@ -20,8 +20,7 @@
   <body>
     <div id="grad2" class="container-fluid p-0">
       <nav
-        id="navtest"
-        class="navbar navbar-expand-md navbar-light sticky-top mr-0"
+        class="navgradtest drop-shadownav navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
           <a class="navbar-brand font-weight-bold" href="../index.html">
@@ -62,18 +61,33 @@
                 >
                   TEAMS
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="valpage.html"
-                    >Valorant
-                    <img src="../svgs/valorant.svg" alt="" />
+                <div
+                  class="dropdown-menu bg-dark"
+                  aria-labelledby="navbarDropdown"
+                >
+                  <a class="dropdown-item" href="valpage.html">
+                    <div class="row">
+                      <div class="col"><p class="text-light">Valorant</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/valorant.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="leaguepage.html"
-                    >League
-                    <img src="../svgs/league.svg" alt="" />
+                    ><div class="row">
+                      <div class="col"><p class="text-light">League</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/league.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="wowpage.html"
-                    >WoW
-                    <img src="../svgs/WoW.svg" alt="" />
+                    ><div class="row">
+                      <div class="col"><p class="text-light">WoW</p></div>
+                      <div class="col justify-content-center">
+                        <img src="../svgs/WoW.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                 </div>
               </li>
@@ -89,18 +103,30 @@
                 >
                   SOCIALS
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div
+                  class="dropdown-menu bg-dark"
+                  aria-labelledby="navbarDropdown"
+                >
                   <a class="dropdown-item" href="#"
-                    >Twitter
-                    <img src="../svgs/twitter.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/twitter.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="#"
-                    >Tiktok
-                    <img src="../svgs/tiktok2.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/tiktok.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                   <a class="dropdown-item" href="/s.html"
-                    >Twitch
-                    <img src="../svgs/twitch.svg" alt="" />
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="../svgs/twitch.svg" alt="" />
+                      </div>
+                    </div>
                   </a>
                 </div>
               </li>
@@ -148,7 +174,7 @@
         <div class="container-lg" id="offlineContainer"></div>
       </div>
 
-      <div class="container-fluid pt-2" id="grad1">
+      <div class="container-fluid mt-5 pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="../svgs/White_C_Logo (1).svg" alt="" />
