--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -20,8 +20,7 @@
   <body>
     <div class="container-fluid p-0" id="grad2">
       <nav
-        id="navtest"
-        class="navbar navbar-expand-md navbar-light sticky-top mr-0"
+        class="navgradtest drop-shadownav navbar navbar-expand-md navbar-light sticky-top mr-0"
       >
         <div class="container-lg">
           <a class="navbar-brand font-weight-bold" href="../index.html">
