team page text improved, scripts moved to own folders

--- a/pages/valpage.html
+++ b/pages/valpage.html
@@ -158,9 +158,11 @@
       </nav>
 
       <div class="container-fluid">
-        <div class="row">
+        <div class="row mt-5">
           <div class="col">
-            <div class="h1 text-center">Celestials Valorant Roster</div>
+            <div class="h1 text-center text-light" style="font-weight: bold">
+              Celestials Valorant Roster
+            </div>
           </div>
         </div>
 
@@ -201,6 +203,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script src="../valscript.js"></script>
+    <script src="../scripts/valscript.js"></script>
   </body>
 </html>
