--- a/pages/leaguepage.html
+++ b/pages/leaguepage.html
@@ -160,7 +160,12 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col">
-            <div class="h1 text-center">Celestials Valorant Roster</div>
+            <div
+              class="h1 text-center mt-5 text-light"
+              style="font-weight: bold"
+            >
+              Celestials League Roster
+            </div>
           </div>
         </div>
 
@@ -201,6 +206,6 @@
       integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
       crossorigin="anonymous"
     ></script>
-    <script src="../leaguescript.js"></script>
+    <script src="../scripts/leaguescript.js"></script>
   </body>
 </html>
