--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -159,7 +159,9 @@
       <div class="container-lg mt-5">
         <div class="row">
           <div class="col">
-            <div class="h1 text-center">Celestials WoW Roster</div>
+            <div class="h1 text-center text-light" style="font-weight: bold">
+              Celestials WoW Roster
+            </div>
           </div>
         </div>
       </div>
@@ -190,7 +192,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="../wtest.js"></script>
+    <script type="module" src="../scripts/WoW.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
