links now working

--- a/index.html
+++ b/index.html
@@ -107,24 +107,38 @@
                   class="dropdown-menu bg-dark"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="https://twitter.com/celestialsgg_"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="svgs/twitter.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="https://www.tiktok.com/@celestialsgg"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="svgs/tiktok.svg" alt="" />
                       </div>
                     </div>
                   </a>
-                  <a class="dropdown-item" href="/s.html"
+                  <a class="dropdown-item" href="https://www.instagram.com/celestialsgg_/"
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="svgs/instagram.svg" alt="" />
+                      </div>
+                    </div>
+                  </a>
+                  <a class="dropdown-item" href="https://www.twitch.tv/Celestials_GG"
                     ><div class="row justify-content-center">
                       <div class="col-auto">
                         <img src="svgs/twitch.svg" alt="" />
+                      </div>
+                    </div>
+                  </a>
+                  <a class="dropdown-item" href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"
+                    ><div class="row justify-content-center">
+                      <div class="col-auto">
+                        <img src="svgs/youtube.svg" alt="" />
                       </div>
                     </div>
                   </a>
@@ -246,7 +260,7 @@
           ></iframe>
         </div>
       </div>
-      <div class="container-fluid pt-2" id="grad1">
+      <div class="container-fluid mt-5 pt-2" id="grad1">
         <div class="row justify-content-center margin-auto">
           <div class="col-auto">
             <img src="svgs/White_C_Logo (1).svg" alt="" />
@@ -256,10 +270,11 @@
           </div>
         </div>
         <div class="row justify-content-center mt-2">
-          <div class="col-auto"><img src="svgs/youtube.svg" alt="" /></div>
-          <div class="col-auto"><img src="svgs/twitter.svg" alt="" /></div>
-          <div class="col-auto"><img src="svgs/instagram.svg" alt="" /></div>
-          <div class="col-auto"><img src="svgs/tiktok.svg" alt="" /></div>
+          <div class="col-auto"><a href="https://www.twitch.tv/Celestials_GG"><img src="svgs/twitch.svg" alt=""></a></div>
+          <div class="col-auto"><a href="https://www.youtube.com/channel/UCW9VbYn5GcCWkMFKn5C1Z3A"><img src="svgs/youtube.svg" alt="" /></a></div>
+          <div class="col-auto"><a href="https://twitter.com/celestialsgg_"><img src="svgs/twitter.svg" alt="" /></a></div>
+          <div class="col-auto"><a href="https://www.instagram.com/celestialsgg_/"><img src="svgs/instagram.svg" alt="" /></a></div>
+          <div class="col-auto"><a href="https://www.tiktok.com/@celestialsgg"><img src="svgs/tiktok.svg" alt="" /></a></div>
         </div>
         <div class="row justify-content-end">
           <div class="col-7 col-md-3">
