--- a/pages/wowpage.html
+++ b/pages/wowpage.html
@@ -178,6 +178,23 @@
             </div>
           </div>
         </div>
+        <div class="row justify-content-center mt-5">
+          <div class="col-auto">
+            <h1 class="align-middle">Are you interested?</h1>
+          </div>
+          <div class="col-auto">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_IYu7ci0QRXWmf4dSrzcwAckCzg_8GEDQPrWoGWnFGIW09A/viewform?usp=sf_link">
+              <button
+                style="height: 100%; width: 100%"
+                class="btn btn-dark"
+                type="button"
+              
+              >
+                <span style="font-weight: bold">APPLY FOR RAID ROSTER</span>
+              </button>
+            </a>
+          </div>
+        </div>
       </div>
       <div class="container-fluid" id="insert">
         <div class="container-lg"></div>
